--- a/faq.html
+++ b/faq.html
@@ -50,114 +50,7 @@
 </head>
 
 <body>
-    <section id="faq" class="faq">
-        <div class="container">
-
-            <div id="sss" class="section-title">
-                <h2>S.S.S</h2>
-                <h3>Sıkça Sorulan <span>Sorular</span></h3>
-            </div>
-
-            <ul class="faq-list">
-
-                <li>
-                    <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Yaşam alanımızın yönetimini
-                        neden
-                        profesyonel bir şirkete vermeliyiz? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i></div>
-                    <div id="faq1" class="collapse" data-bs-parent=".faq-list">
-                        <p>
-                            Aidatları toplayamıyorsanız, komşularınızla kötü olmak istemiyorsanız, kapı kapı dolaşmak
-                            istemiyorsanız, tartışmalardan sıkıldıysanız, birliği sağlayamadığınız için işler yarım
-                            kalıyorsa, hukuksal işler ve muhasebe ile uğraşacak vaktiniz yoksa profesyonel bir şirkete
-                            yönetimi
-                            devretmeniz en uygun karar olacaktır.
-                        </p>
-                    </div>
-                </li>
-
-                <li>
-                    <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Profesyonel yönetim
-                        firmasının
-                        bizlere yararları nelerdir? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i></div>
-                    <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-                        <p>
-                            Yaşam alanınızla ilgili her işi biz üstleniyor ve sizi olası tartışmalardan, stres
-                            ve zaman kaybından kurtarıyoruz. Bunu yaparken de huzurun korunması en önemli önceliğimiz
-                            oluyor.
-                            Aidatlar düzenli toplanıyor, giderler düzenli ödeniyor, rutin bakımlar yapılıyor ve arızalar
-                            hızlıca
-                            çözülüyor.
-                        </p>
-                    </div>
-                </li>
-
-                <li>
-                    <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Yaşam alanımızda birliği
-                        sağlayamıyoruz, yeterli çoğunluğu bir araya getiremediğimiz için karar alamıyoruz, ne
-                        yapmalıyız? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i></div>
-                    <div id="faq3" class="collapse" data-bs-parent=".faq-list">
-                        <p>
-                            Bizi arayın! Bizler bu konuda deneyimliyiz. Birçok yol var, bizi ararsanız memnuniyetle
-                            hangi
-                            yolun size uygun olduğunu gösterebiliriz.
-                        </p>
-                    </div>
-                </li>
-
-                <li>
-                    <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Profesyonel yönetim
-                        firmasının
-                        maliyeti ne kadar?
-                        <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i>
-                    </div>
-                    <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-                        <p>
-                            Fiyatlarımız sabit. Lokasyona veya yaşam alanınınızın büyüklüğüne göre fiyat vermiyoruz.
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Yaşam alanımızdaki tamir ve
-                        arızaları
-                        nasıl çözüyorsunuz? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i></div>
-                    <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-                        <p>
-                            Yaşam alanımızdaki tamir ve arızalar için bütçe oluşturuyoruz. Bu bütçenin tamamlanmasını
-                            beklemiyoruz.
-                            Belli
-                            bir miktara ulaştığı zaman vadeli şekilde veya şirket havuzumuzdan ödemeyi
-                            gerçekleştiriyoruz.
-                            Acil
-                            tamir ve arızalar için ise bütçe toplanmasını beklemiyoruz, kasanızda yeterli para da
-                            aramıyoruz. Şirket
-                            havuzumuzdan ödemeyi yapıyor ve sorunu çözüyoruz.
-                        </p>
-                    </div>
-                </li>
-                <li>
-                    <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Yaşam alanımızı kanunlara
-                        uygun
-                        yönetiyor musunuz? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i>
-                    </div>
-                    <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-                        <p>
-                            Yaşam alanınızın yönetimini Kat Mülkiyeti Kanunu'ndan aldığımız yetki ile adil ve kanunlara
-                            yüzde yüz
-                            uygun şekilde yönetiyoruz.
-                        </p>
-                    </div>
-                </li>
-
-                <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-                <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-                <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-                <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-                <script src="assets/vendor/php-email-form/validate.js"></script>
+    <h1>aaaaa</h1>
 </body>
 
 </html>
