--- a/faq.html
+++ b/faq.html
@@ -61,43 +61,35 @@
             <ul class="faq-list">
 
                 <li>
-                    <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Yaşam alanımızın yönetimini
-                        neden
-                        profesyonel bir şirkete vermeliyiz? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i></div>
+                    <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Demirbaşlar? <i
+                            class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                     <div id="faq1" class="collapse" data-bs-parent=".faq-list">
                         <p>
-                            Aidatları toplayamıyorsanız, komşularınızla kötü olmak istemiyorsanız, kapı kapı dolaşmak
-                            istemiyorsanız, tartışmalardan sıkıldıysanız, birliği sağlayamadığınız için işler yarım
-                            kalıyorsa, hukuksal işler ve muhasebe ile uğraşacak vaktiniz yoksa profesyonel bir şirkete
-                            yönetimi
-                            devretmeniz en uygun karar olacaktır.
+                            -
                         </p>
                     </div>
                 </li>
 
                 <li>
-                    <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Profesyonel yönetim
-                        firmasının
-                        bizlere yararları nelerdir? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i></div>
+                    <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Site ödemelerinde öncelik<i
+                            class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                     <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                         <p>
-                            Yaşam alanınızla ilgili her işi biz üstleniyor ve sizi olası tartışmalardan, stres
-                            ve zaman kaybından kurtarıyoruz. Bunu yaparken de huzurun korunması en önemli önceliğimiz
-                            oluyor.
-                            Aidatlar düzenli toplanıyor, giderler düzenli ödeniyor, rutin bakımlar yapılıyor ve arızalar
-                            hızlıca
-                            çözülüyor.
+                            FATURALAR>PERSONEL>İŞ YAPTIRDIĞIMIZ ŞİRKET VEYA USTALAR>ASANSÖR BAKIMI>PARGA
+                            Sitenin borcu yoksa, kasadaki paranın gideceği bir yer yoksa, para bir ödeme için
+                            biriktirilmiyorsa veya biriktirilen miktar ödeme yapacağınız yere de yetiyorsa ödeme
+                            yapabilirsiniz.
+                            Kimler beklemez?
+                            5000 altı işler için ustalar beklemek istemez.
+                            Kimler bekler?
+                            İlaçlamacı bekler.
                         </p>
                     </div>
                 </li>
 
                 <li>
-                    <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Yaşam alanımızda birliği
-                        sağlayamıyoruz, yeterli çoğunluğu bir araya getiremediğimiz için karar alamıyoruz, ne
-                        yapmalıyız? <i class="bi bi-chevron-down icon-show"></i><i
-                            class="bi bi-chevron-up icon-close"></i></div>
+                    <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Sakin ödeme yapmıyor<i
+                            class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                     <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                         <p>
                             Bizi arayın! Bizler bu konuda deneyimliyiz. Birçok yol var, bizi ararsanız memnuniyetle
@@ -108,9 +100,8 @@
                 </li>
 
                 <li>
-                    <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Profesyonel yönetim
-                        firmasının
-                        maliyeti ne kadar?
+                    <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Site grubunda
+                        istek-soru-şikayet yazıldı Whatsapp
                         <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i>
                     </div>
                     <div id="faq4" class="collapse" data-bs-parent=".faq-list">
