--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             şirket
             olarak karşılıyoruz</strong>
         </a></h2>
-      <h3> <a class="bbb" href="#portfolio" link rel="preload"> <strong>117 yaşam alanı ve toplamda 2300 bağımsız alana
+      <h3> <a class="bbb" href="#portfolio" link rel="preload"> <strong>134 yaşam alanına ve toplamda 2600 bağımsız
+            alana
             hizmet
             veriyoruz!</strong>
         </a></h3>
@@ -462,12 +463,23 @@
         </div>
 
         <div class="row portfolio-container">
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="is-merkezi/referanslar/Ahmet-Urgancı-Cephe.jpg" class="img-fluid" alt="iş merkezi yönetimi"
+            <img src="is-merkezi/referanslar/parga harita 2026.jpg" class="img-fluid" alt="iş merkezi yönetimi"
               loading="lazy">
             <div class="portfolio-info">
-              <h4>Ahmet Urgancı İş Merkezi - Güngören</h4>
+              <h4>Parga Yönetim - Harita</h4>
+              <p></p>
+              <a href="is-merkezi/referanslar/parga harita 2026.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Parga Yönetim - Referanslar"><i
+                  class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="is-merkezi/referanslar/Ahmet-Urgancı-Cephe.jpg" class="img-fluid"
+              alt="istanbul apartman şirketleri" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Parga Yönetim - Referanslar</h4>
               <p></p>
               <a href="is-merkezi/referanslar/Ahmet-Urgancı-Cephe.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Ahmet Urgancı İş Merkezi"><i class="bx bx-plus"></i></a>
@@ -1671,8 +1683,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Zehra A.</h4>
-                <span>Tahsilat</span>
+                <h4>Kübra A.</h4>
+                <span>Planlama</span>
               </div>
             </div>
           </div>
@@ -1690,7 +1702,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Mihriban B.</h4>
+                <h4>Hayrunnisa B.</h4>
                 <span>Tahsilat</span>
               </div>
             </div>
@@ -1728,7 +1740,7 @@
               </div>
               <div class="member-info">
                 <h4>Kübra C.</h4>
-                <span>Muhasebe</span>
+                <span>Tahsilat</span>
               </div>
             </div>
           </div>
@@ -1745,8 +1757,26 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Erdal D.</h4>
+                <h4>Hamza D.</h4>
                 <span>Teknik</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Atilla E.</h4>
+                <span>Temizlik</span>
               </div>
             </div>
           </div>
@@ -1799,7 +1829,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>İlem G.</h4>
+                <h4>Fevzi G.</h4>
                 <span>Temizlik</span>
               </div>
             </div>
