--- a/index.html
+++ b/index.html
@@ -2102,12 +2102,16 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email: <a href="mailto:info@pargayonetim.com"><strong>info@pargayonetim.com</strong> </a> </h4>
-
+                <h4>Asansör: <a href="mailto:asansor@pargayonetim.com"><strong>asansor@pargayonetim.com</strong> </a>
+                </h4>
+                <h4>Fatura: <a href="mailto:fatura@pargayonetim.com"><strong>fatura@pargayonetim.com</strong> </a>
+                </h4>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Telefon: <a href="tel:+905467620002"><strong> 0546 762 00 02</strong></a> </h4>
+                <h4>Santral: <a href="tel:+902129935959"><strong> 0212 993 59 59</strong></a> </h4>
 
               </div>
 
